<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="629dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="49dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/orkney_bold"
            android:gravity="center|center_horizontal"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/kindpng_2366695" />

        <TextView
            android:id="@+id/textViewDifficulty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/orkney_medium"
            android:gravity="center|center_horizontal"
            android:text="@string/difficulty"
            android:textColor="#000000"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonEasy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_type_2"
                android:fontFamily="@font/orkney_regular"
                android:text="@string/easy"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonMedium"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_type_1"
                android:fontFamily="@font/orkney_regular"
                android:text="@string/Medium"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonHard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_type_3"
                android:fontFamily="@font/orkney_regular"
                android:text="@string/Hard"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>