<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewResults"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/orkney_bold"
            android:gravity="center|center_horizontal"
            android:text="@string/results"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <TextView
                android:id="@+id/textViewResultsRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center|center_horizontal"
                android:fontFamily="@font/orkney_medium"
                android:text="Good Job!"
                android:textSize="22sp" />
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_type_1"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewScore"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lunchtype_regular"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/score"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewScorePercentage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/orkney_bold"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDifficulty"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lunchtype_regular"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/Difficulty"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewDifficultyText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/orkney_bold"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewTimePerQuestion"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lunchtype_regular"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/time_per_question"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewTimePerQuestionNum"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/orkney_bold"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewHighestStreak"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lunchtype_regular"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/Highest_Streak"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewHighestStreakNum"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/orkney_bold"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="60dp">

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_type_3"
                android:fontFamily="@font/orkney_regular"
                android:text="@string/retry"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonChangeDiff"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_type_2"
                android:fontFamily="@font/orkney_regular"
                android:text="@string/Menu"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>