<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393939"
    tools:context=".Activity_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#FFFFFF">

                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:background="#FFFFFF"
                    app:srcCompat="@android:drawable/ic_delete" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStreak"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal"
                    android:background="#FFFFFF"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/streak"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/streak"
                        android:textColor="#818181" />

                    <TextView
                        android:id="@+id/textViewStreakNum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="8"
                        android:textColor="#000000" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewQuestionTracker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal"
                    android:background="#FFFFFF"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewQuestionLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:gravity="center|center_horizontal"
                        android:text="@string/question"
                        android:textColor="#818181" />

                    <TextView
                        android:id="@+id/textViewCurrQuestionNum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="end"
                        android:text="8"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textViewOutOf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_weight="0.2"
                        android:gravity="center|center_horizontal"
                        android:text="@string/out_of"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textViewTotalNumQuestions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="8"
                        android:textColor="#000000" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#393939"
            android:backgroundTint="#393939"
            android:elevation="3dp">

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:autoSizeMaxTextSize="32sp"
                android:autoSizeMinTextSize="18sp"
                android:autoSizeStepGranularity="2sp"
                android:background="#393939"
                android:backgroundTint="#393939"
                android:fontFamily="@font/orkney_medium"
                android:gravity="center|center_horizontal"
                android:lineSpacingExtra="4sp"
                android:text="TextView"
                android:textColor="#C1C1C1"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

        <TableLayout
            android:id="@+id/tableLayoutAnswers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:shrinkColumns="0,1"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center|center_horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAnswer1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/textViewAnswer1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:elevation="2dp"
                        android:fontFamily="@font/orkney_medium"
                        android:gravity="center|center_horizontal"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAnswer2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/textViewAnswer2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:elevation="2dp"
                        android:fontFamily="@font/orkney_medium"
                        android:gravity="center|center_horizontal"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center|center_horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAnswer3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/textViewAnswer3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:elevation="2dp"
                        android:fontFamily="@font/orkney_medium"
                        android:gravity="center|center_horizontal"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAnswer4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/textViewAnswer4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:elevation="2dp"
                        android:fontFamily="@font/orkney_medium"
                        android:gravity="center|center_horizontal"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
            </TableRow>

        </TableLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.30"
            android:background="#FFFFFF">

            <Button
                android:id="@+id/buttonNextQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:text="@string/NextQuestion" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">

            <ProgressBar
                android:id="@+id/progressBarTimer"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:progressDrawable="@drawable/progress_bar_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:progress="80" />

            <TextView
                android:id="@+id/textViewProgressBarNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orkney_medium"
                android:gravity="center|center_horizontal"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/progressBarTimer"
                app:layout_constraintStart_toStartOf="@+id/progressBarTimer"
                app:layout_constraintTop_toTopOf="@+id/progressBarTimer"
                app:layout_constraintVertical_bias="0.448" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>